feat: [AH-2337]: CLI push for RPM packages (#121)
* 9c376e fixed PR comment

* 2ce7b7 Resolved merge conflict
