# internal/api/ar_pkg/client_gen.go
@@ -1,6 +1,6 @@
 // Package ar_pkg provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.16.3 DO NOT EDIT.
 package ar_pkg
 
 import (
@@ -48,11 +48,20 @@ type UploadGoPackageMultipartBody struct {
 	Zip openapi_types.File `json:"zip"`
 }
 
+// UploadRpmPackageMultipartBody defines parameters for UploadRpmPackage.
+type UploadRpmPackageMultipartBody struct {
+	// File Package .rpm file to upload
+	File *openapi_types.File `json:"file,omitempty"`
+}
+
 // UploadGenericPackageMultipartRequestBody defines body for UploadGenericPackage for multipart/form-data ContentType.
 type UploadGenericPackageMultipartRequestBody UploadGenericPackageMultipartBody
 
 // UploadGoPackageMultipartRequestBody defines body for UploadGoPackage for multipart/form-data ContentType.
 type UploadGoPackageMultipartRequestBody UploadGoPackageMultipartBody
+
+// UploadRpmPackageMultipartRequestBody defines body for UploadRpmPackage for multipart/form-data ContentType.
+type UploadRpmPackageMultipartRequestBody UploadRpmPackageMultipartBody
 
 // RequestEditorFn  is the function signature for the RequestEditor callback function
 type RequestEditorFn func(ctx context.Context, req *http.Request) error
@@ -153,6 +162,9 @@ type ClientInterface interface {
 
 	// UploadGoPackageWithBody request with any body
 	UploadGoPackageWithBody(ctx context.Context, accountId string, registry string, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*http.Response, error)
+
+	// UploadRpmPackageWithBody request with any body
+	UploadRpmPackageWithBody(ctx context.Context, accountId string, registry string, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*http.Response, error)
 }
 
 func (c *Client) UploadComposerPackageWithBody(ctx context.Context, accountId string, registry string, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*http.Response, error) {
@@ -253,6 +265,18 @@ func (c *Client) UploadGenericPackageWithBody(ctx context.Context, accountId str
 
 func (c *Client) UploadGoPackageWithBody(ctx context.Context, accountId string, registry string, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*http.Response, error) {
 	req, err := NewUploadGoPackageRequestWithBody(c.Server, accountId, registry, contentType, body)
+	if err != nil {
+		return nil, err
+	}
+	req = req.WithContext(ctx)
+	if err := c.applyEditors(ctx, req, reqEditors); err != nil {
+		return nil, err
+	}
+	return c.Client.Do(req)
+}
+
+func (c *Client) UploadRpmPackageWithBody(ctx context.Context, accountId string, registry string, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*http.Response, error) {
+	req, err := NewUploadRpmPackageRequestWithBody(c.Server, accountId, registry, contentType, body)
 	if err != nil {
 		return nil, err
 	}
@@ -772,6 +796,49 @@ func NewUploadGoPackageRequestWithBody(server string, accountId string, registry
 	return req, nil
 }
 
+// NewUploadRpmPackageRequestWithBody generates requests for UploadRpmPackage with any type of body
+func NewUploadRpmPackageRequestWithBody(server string, accountId string, registry string, contentType string, body io.Reader) (*http.Request, error) {
+	var err error
+
+	var pathParam0 string
+
+	pathParam0, err = runtime.StyleParamWithLocation("simple", false, "accountId", runtime.ParamLocationPath, accountId)
+	if err != nil {
+		return nil, err
+	}
+
+	var pathParam1 string
+
+	pathParam1, err = runtime.StyleParamWithLocation("simple", false, "registry", runtime.ParamLocationPath, registry)
+	if err != nil {
+		return nil, err
+	}
+
+	serverURL, err := url.Parse(server)
+	if err != nil {
+		return nil, err
+	}
+
+	operationPath := fmt.Sprintf("/pkg/%s/%s/rpm", pathParam0, pathParam1)
+	if operationPath[0] == '/' {
+		operationPath = "." + operationPath
+	}
+
+	queryURL, err := serverURL.Parse(operationPath)
+	if err != nil {
+		return nil, err
+	}
+
+	req, err := http.NewRequest("PUT", queryURL.String(), body)
+	if err != nil {
+		return nil, err
+	}
+
+	req.Header.Add("Content-Type", contentType)
+
+	return req, nil
+}
+
 func (c *Client) applyEditors(ctx context.Context, req *http.Request, additionalEditors []RequestEditorFn) error {
 	for _, r := range c.RequestEditors {
 		if err := r(ctx, req); err != nil {
@@ -841,6 +908,9 @@ type ClientWithResponsesInterface interface {
 
 	// UploadGoPackageWithBodyWithResponse request with any body
 	UploadGoPackageWithBodyWithResponse(ctx context.Context, accountId string, registry string, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*UploadGoPackageResp, error)
+
+	// UploadRpmPackageWithBodyWithResponse request with any body
+	UploadRpmPackageWithBodyWithResponse(ctx context.Context, accountId string, registry string, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*UploadRpmPackageResp, error)
 }
 
 type UploadComposerPackageResp struct {
@@ -1032,6 +1102,27 @@ func (r UploadGoPackageResp) StatusCode() int {
 	return 0
 }
 
+type UploadRpmPackageResp struct {
+	Body         []byte
+	HTTPResponse *http.Response
+}
+
+// Status returns HTTPResponse.Status
+func (r UploadRpmPackageResp) Status() string {
+	if r.HTTPResponse != nil {
+		return r.HTTPResponse.Status
+	}
+	return http.StatusText(0)
+}
+
+// StatusCode returns HTTPResponse.StatusCode
+func (r UploadRpmPackageResp) StatusCode() int {
+	if r.HTTPResponse != nil {
+		return r.HTTPResponse.StatusCode
+	}
+	return 0
+}
+
 // UploadComposerPackageWithBodyWithResponse request with arbitrary body returning *UploadComposerPackageResp
 func (c *ClientWithResponses) UploadComposerPackageWithBodyWithResponse(ctx context.Context, accountId string, registry string, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*UploadComposerPackageResp, error) {
 	rsp, err := c.UploadComposerPackageWithBody(ctx, accountId, registry, contentType, body, reqEditors...)
@@ -1111,6 +1202,15 @@ func (c *ClientWithResponses) UploadGoPackageWithBodyWithResponse(ctx context.Co
 		return nil, err
 	}
 	return ParseUploadGoPackageResp(rsp)
+}
+
+// UploadRpmPackageWithBodyWithResponse request with arbitrary body returning *UploadRpmPackageResp
+func (c *ClientWithResponses) UploadRpmPackageWithBodyWithResponse(ctx context.Context, accountId string, registry string, contentType string, body io.Reader, reqEditors ...RequestEditorFn) (*UploadRpmPackageResp, error) {
+	rsp, err := c.UploadRpmPackageWithBody(ctx, accountId, registry, contentType, body, reqEditors...)
+	if err != nil {
+		return nil, err
+	}
+	return ParseUploadRpmPackageResp(rsp)
 }
 
 // ParseUploadComposerPackageResp parses an HTTP response from a UploadComposerPackageWithResponse call
@@ -1250,6 +1350,22 @@ func ParseUploadGoPackageResp(rsp *http.Response) (*UploadGoPackageResp, error) 
 	}
 
 	response := &UploadGoPackageResp{
+		Body:         bodyBytes,
+		HTTPResponse: rsp,
+	}
+
+	return response, nil
+}
+
+// ParseUploadRpmPackageResp parses an HTTP response from a UploadRpmPackageWithResponse call
+func ParseUploadRpmPackageResp(rsp *http.Response) (*UploadRpmPackageResp, error) {
+	bodyBytes, err := io.ReadAll(rsp.Body)
+	defer func() { _ = rsp.Body.Close() }()
+	if err != nil {
+		return nil, err
+	}
+
+	response := &UploadRpmPackageResp{
 		Body:         bodyBytes,
 		HTTPResponse: rsp,
 	}
